--- a/first_demo/app.json
+++ b/first_demo/app.json
@@ -1,14 +1,38 @@
 {
-  "pages": [
-    "pages/index/index",
-    "pages/logs/logs",
-    "pages/test/test"
-  ],
-  "window": {
-    "backgroundTextStyle": "light",
-    "navigationBarBackgroundColor": "#fff",
-    "navigationBarTitleText": "First miniprogram of Miao",
-    "navigationBarTextStyle": "black"
-  },
-  "sitemapLocation": "sitemap.json"
+    "pages": [
+        "pages/index/index",
+        "pages/logs/logs",
+        "pages/test/test"
+
+    ],
+    "window": {
+        "backgroundTextStyle": "light",
+        "navigationBarBackgroundColor": "#fff",
+        "navigationBarTitleText": "First miniprogram of Miao",
+        "navigationBarTextStyle": "black"
+    },
+    "tabBar": {
+
+        "list": [{
+                "iconPath": "images/home1.png",
+                "selectedIconPath": "images/home2.png",
+
+                "pagePath": "pages/index/index",
+                "text": "首页"
+            },
+            {
+                "iconPath": "images/log1.png",
+                "selectedIconPath": "images/log2.png",
+
+                "pagePath": "pages/logs/logs",
+                "text": "日志"
+            }
+        ]
+    },
+    "networkTimeout": {
+        "request": 10000,
+        "downloadFile": 10000
+    },
+    "debug": true,
+    "sitemapLocation": "sitemap.json"
 }
